--- a/templates/user_details.html
+++ b/templates/user_details.html
@@ -11,7 +11,7 @@
 <body>
   <img src="{{user.image_url}}" alt="Profile Image">
   <h1>{{user.first_name}} {{user.last_name}}</h1>
-  <form action="">
+  <form action="/users/{{user.id}}/edit">
     <input type="submit" value="Edit" />
   </form>
   <form action="">
