--- a/templates/add_user_form.html
+++ b/templates/add_user_form.html
@@ -1,20 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Add User</title>
-</head>
-
-<body>
-  <h1>Add New User</h1>
-  <form action="/users/new" method="POST">
-    <input type="text" name="first" placeholder="First Name" required>
-    <input type="text" name="last" placeholder="Last Name" required>
-    <input type="url" name="url" placeholder="Profile Image URL">
-    <button>Add</button>
-  </form>
-</body>
-
-</html>
+{% extends "base.html" %}
+{% block title %}Add User{% endblock %}
+{% block content %}
+<h1>Add New User</h1>
+<form action="/users/new" method="POST">
+  <input type="text" name="first" placeholder="First Name" required>
+  <input type="text" name="last" placeholder="Last Name" required>
+  <input type="url" name="url" placeholder="Profile Image URL">
+  <button>Add</button>
+</form>
+{% endblock %}
