--- a/templates/users.html
+++ b/templates/users.html
@@ -1,20 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Users</title>
-</head>
-
-<body>
-  <h1>Users</h1>
-  <ul>
-    {% for user in users %}
-    <li><a href="/users/{{user.id}}">{{user.first_name}} {{user.last_name}}</a></li>
-    {% endfor %}
-  </ul>
-  <a href="/users/new">Add User</a>
-</body>
-
-</html>
+{% extends "base.html" %}
+{% block title %}All Users{% endblock %}
+{% block content %}
+<h1>Users</h1>
+<ul>
+  {% for user in users %}
+  <li>
+    <a href="/users/{{user.id}}">
+      {{user.first_name}} {{user.last_name}}
+    </a>
+  </li>
+  {% endfor %}
+</ul>
+<a href="/users/new">Add User</a>
+{% endblock %}
