--- a/templates/user_details.html
+++ b/templates/user_details.html
@@ -6,7 +6,7 @@
 <form action="/users/{{user.id}}/edit">
   <input type="submit" value="Edit" />
 </form>
-<form action="">
+<form action="/users/{{user.id}}/delete" method="POST">
   <input type="submit" value="Delete" />
 </form>
 {% endblock %}
