--- a/templates/user_details.html
+++ b/templates/user_details.html
@@ -2,7 +2,7 @@
 {% block title %}User Details{% endblock %}
 {% block content %}
 <img src="{{user.image_url}}" alt="Profile Image">
-<h1>{{user.first_name}} {{user.last_name}}</h1>
+<h1>{{user.get_full_name()}}</h1>
 <form action="/users/{{user.id}}/edit">
   <input type="submit" value="Edit" />
 </form>
