--- a/templates/edit_user_form.html
+++ b/templates/edit_user_form.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Edit User{% endblock %}
 {% block content %}
-<h1>Edit User: {{user.get_full_name()}}</h1>
+<h1>Edit User: {{user.full_name}}</h1>
 <form action="/users/{{user.id}}/edit" method="POST">
   <input type="text" name="first" value="{{user.first_name}}" required>
   <input type="text" name="last" value="{{user.last_name}}" required>
