--- a/templates/users.html
+++ b/templates/users.html
@@ -6,7 +6,7 @@
   {% for user in users %}
   <li>
     <a href="/users/{{user.id}}">
-      {{user.get_full_name()}}
+      {{user.full_name}}
     </a>
   </li>
   {% endfor %}
