--- a/templates/add_user_form.html
+++ b/templates/add_user_form.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Add User{% endblock %}
 {% block content %}
-<h1>Add New User</h1>
+<h1>Create a User</h1>
 <form action="/users/new" method="POST">
   <input type="text" name="first" placeholder="First Name" required>
   <input type="text" name="last" placeholder="Last Name" required>
