--- a/templates/add_user_form.html
+++ b/templates/add_user_form.html
@@ -1,11 +1,25 @@
 {% extends "base.html" %}
 {% block title %}Add User{% endblock %}
 {% block content %}
-<h1>Create a User</h1>
-<form action="/users/new" method="POST">
-  <input type="text" name="first" placeholder="First Name" required>
-  <input type="text" name="last" placeholder="Last Name" required>
-  <input type="url" name="url" placeholder="Profile Image URL">
-  <button>Add</button>
-</form>
+<div class="card">
+  <div class="card-body">
+    <h1 class="card-title display-4 text-primary">Create User</h1>
+    <form action="/users/new" method="POST" class="">
+      <div class="form-group">
+        <label for="first">First Name</label>
+        <input type="text" class="form-control" name="first" placeholder="Enter first name" required>
+      </div>
+      <div class="form-group">
+        <label for="last">Last Name</label>
+        <input type="text" class="form-control" name="last" placeholder="Enter last name" required>
+      </div>
+      <div class="form-group">
+        <label for="url">Profile Image</label>
+        <input type="url" class="form-control" name="url" placeholder="Enter image url" required>
+      </div>
+      <button type="submit" class="btn btn-outline-primary btn-block">Submit</button>
+      <a href="/users" class="btn btn-outline-danger btn-block">Cancel</a>
+    </form>
+  </div>
+</div>
 {% endblock %}
