--- a/templates/user_details.html
+++ b/templates/user_details.html
@@ -1,12 +1,14 @@
 {% extends "base.html" %}
 {% block title %}User Details{% endblock %}
 {% block content %}
-<img src="{{user.image_url}}" alt="Profile Image">
-<h1>{{user.full_name}}</h1>
-<form action="/users/{{user.id}}/edit">
-  <input type="submit" value="Edit" />
-</form>
-<form action="/users/{{user.id}}/delete" method="POST">
-  <input type="submit" value="Delete" />
-</form>
+<div class="card text-center" style="width:14rem;">
+  <img src="{{user.image_url}}" class="card-img-top" alt="Profile Image">
+  <div class="card-body">
+    <h5 class="card-title">{{user.full_name}}</h5>
+    <a href="/users/{{user.id}}/edit" class="btn btn-success btn-sm">Edit</a>
+    <form action="/users/{{user.id}}/delete" class="d-inline" method="POST">
+      <input type="submit" class="btn btn-warning btn-sm" value="Delete" />
+    </form>
+  </div>
+</div>
 {% endblock %}
