--- a/templates/users.html
+++ b/templates/users.html
@@ -1,15 +1,13 @@
 {% extends "base.html" %}
 {% block title %}All Users{% endblock %}
 {% block content %}
-<h1>Users</h1>
-<ul>
+<h1 class="display-3 text-primary">Users</h1>
+<div class="list-group text-center">
   {% for user in users %}
-  <li>
-    <a href="/users/{{user.id}}">
-      {{user.full_name}}
-    </a>
-  </li>
+  <a href="/users/{{user.id}}" class="list-group-item list-group-item-action">
+    {{user.full_name}}
+  </a>
   {% endfor %}
-</ul>
-<a href="/users/new">Add User</a>
+</div>
+<a href="/users/new" class="btn btn-outline-primary mt-3">Add User</a>
 {% endblock %}
