style edit user form and user details card

--- a/templates/add_user_form.html
+++ b/templates/add_user_form.html
@@ -4,7 +4,7 @@
 <div class="card">
   <div class="card-body">
     <h1 class="card-title display-4 text-primary">Create User</h1>
-    <form action="/users/new" method="POST" class="">
+    <form action="/users/new" method="POST">
       <div class="form-group">
         <label for="first">First Name</label>
         <input type="text" class="form-control" name="first" placeholder="Enter first name" required>
