--- a/templates/edit_user_form.html
+++ b/templates/edit_user_form.html
@@ -1,14 +1,25 @@
 {% extends "base.html" %}
 {% block title %}Edit User{% endblock %}
 {% block content %}
-<h1>Edit User: {{user.full_name}}</h1>
-<form action="/users/{{user.id}}/edit" method="POST">
-  <input type="text" name="first" value="{{user.first_name}}" required>
-  <input type="text" name="last" value="{{user.last_name}}" required>
-  <input type="url" name="url" value="{{user.image_url}}" required>
-  <button>Save</button>
-</form>
-<form action="/users/{{user.id}}">
-  <input type="submit" value="Cancel" />
-</form>
+<div class="card">
+  <div class="card-body">
+    <h1 class="card-title display-4 text-primary">Edit User</h1>
+    <form action="/users/{{user.id}}/edit" method="POST">
+      <div class="form-group">
+        <label for="first">First Name</label>
+        <input type="text" class="form-control" name="first" value="{{user.first_name}}" required>
+      </div>
+      <div class="form-group">
+        <label for="last">Last Name</label>
+        <input type="text" class="form-control" name="last" value="{{user.last_name}}" required>
+      </div>
+      <div class="form-group">
+        <label for="url">Profile Image URL</label>
+        <input type="url" class="form-control" name="url" value="{{user.image_url}}" required>
+      </div>
+      <button type="submit" class="btn btn-outline-primary btn-block">Save Changes</button>
+      <a href="/users/{{user.id}}" class="btn btn-outline-danger btn-block">Cancel</a>
+    </form>
+  </div>
+</div>
 {% endblock %}
