--- a/templates/user_details.html
+++ b/templates/user_details.html
@@ -9,6 +9,20 @@
     <form action="/users/{{user.id}}/delete" class="d-inline" method="POST">
       <input type="submit" class="btn btn-outline-danger btn-sm btn-block mt-2" value="Delete" />
     </form>
+
+    <!-- Connditionally Render Posts -->
+    {% if user.posts %}
+    <h5 class="card-title mt-3 font-weight-light">Recent Posts</h5>
+    <div class="list-group text-center">
+      {% for post in user.posts %}
+      <a href="/users/{{user.id}}" class="list-group-item list-group-item-action">
+        "{{post.title}}"
+      </a>
+      {% endfor %}
+    </div>
+    {% else %}
+    <p class="font-italic font-weight-light mt-3">{{user.first_name}} hasn't posted yet...</p>
+    {% endif %}
   </div>
 </div>
 <a href="/users" class="btn btn-outline-secondary mt-3">Go Back</a>
