--- a/templates/users.html
+++ b/templates/users.html
@@ -9,5 +9,5 @@
   </a>
   {% endfor %}
 </div>
-<a href="/users/new" class="btn btn-outline-primary mt-3">Add User</a>
+<a href="/users/new" class="btn btn-outline-primary bg-white mt-3">Add User</a>
 {% endblock %}
