--- a/templates/add_post_form.html
+++ b/templates/add_post_form.html
@@ -4,7 +4,7 @@
 <div class="card" style="width:50rem;">
   <div class="card-body">
     <h1 class="card-title display-4 text-primary text-center">Add Post for {{user.first_name}}</h1>
-    <form action="/users/new" method="POST">
+    <form action="/users/{{user.id}}/posts/new" method="POST">
       <div class="form-group">
         <label for="title">Title</label>
         <input type="text" class="form-control" name="title" placeholder="Enter title" required>
