--- a/templates/user_details.html
+++ b/templates/user_details.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %}User Details{% endblock %}
 {% block content %}
-<div class="card text-center" style="width:14rem;">
+<div class="card text-center" style="width:17rem;">
   <img src="{{user.image_url}}" class="card-img-top" alt="Profile Image">
   <div class="card-body">
     <h5 class="card-title">{{user.full_name}}</h5>
@@ -15,15 +15,15 @@
     <h5 class="card-title mt-3 font-weight-light">Recent Posts</h5>
     <div class="list-group text-center">
       {% for post in user.posts %}
-      <a href="/users/{{user.id}}" class="list-group-item list-group-item-action">
+      <a href="/posts/{{post.id}}" class="list-group-item list-group-item-action">
         "{{post.title}}"
       </a>
       {% endfor %}
-      <a href="/users/{{user.id}}/posts/new" class="btn btn-outline-primary btn-sm mt-3 w-40 mx-auto">Add Post</a>
     </div>
     {% else %}
     <p class="font-italic font-weight-light mt-3">{{user.first_name}} hasn't posted yet...</p>
     {% endif %}
+    <a href="/users/{{user.id}}/posts/new" class="btn btn-outline-primary btn-sm mt-3 w-40 mx-auto">Add Post</a>
   </div>
 </div>
 <a href="/users" class="btn btn-outline-secondary btn-sm mt-3">&#60;&#60; Go Back</a>
