--- a/templates/post.html
+++ b/templates/post.html
@@ -7,8 +7,10 @@
     <h1 class="card-title display-4 text-primary text-center">{{post.title}}</h1>
     <p class="card-text">{{post.content}}</p>
     <footer class="blockquote-footer mb-3">{{post.author.full_name}}</footer>
-    <a href="#" class="btn btn-outline-primary btn-sm btn-block">Edit</a>
-    <a href="#" class="btn btn-outline-danger btn-sm btn-block">Delete</a>
+    <a href="/posts/{{post.id}}/edit" class="btn btn-outline-primary btn-sm btn-block">Edit</a>
+    <form action="/posts/{{post.id}}/delete" class="d-inline" method="POST">
+      <input type="submit" class="btn btn-outline-danger btn-sm btn-block mt-2" value="Delete" />
+    </form>
   </div>
 </div>
 <a href="/users/{{post.user_id}}" class="btn btn-outline-secondary btn-sm my-3">&#60;&#60; Go Back</a>
