--- a/templates/user_details.html
+++ b/templates/user_details.html
@@ -26,5 +26,5 @@
     <a href="/users/{{user.id}}/posts/new" class="btn btn-outline-primary btn-sm mt-3 w-40 mx-auto">Add Post</a>
   </div>
 </div>
-<a href="/users" class="btn btn-outline-secondary btn-sm mt-3">&#60;&#60; Go Back</a>
+<a href="/users" class="btn btn-outline-secondary btn-sm mt-3">&#60;&#60; All Users</a>
 {% endblock %}
