implement tag edit routes and functionality

--- a/templates/tag.html
+++ b/templates/tag.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Tag{% endblock %}
 {% block content %}
-<div class="card text-center style=" width:40rem;">
+<div class="card text-center">
   <div class="card-body">
     <h1 class="card-title display-4 text-primary text-center">{{tag.name}}</h1>
     <!-- Conditionally Render Posts -->
