--- a/templates/add_tag_form.html
+++ b/templates/add_tag_form.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Add Tag{% endblock %}
 {% block content %}
-<div class="card" style="width:50rem;">
+<div class="card">
   <div class="card-body">
     <h1 class="card-title display-4 text-primary text-center">Add Tag</h1>
     <form action="/tags/new" method="POST">
