--- a/templates/add_post_form.html
+++ b/templates/add_post_form.html
@@ -9,11 +9,20 @@
         <label for="title">Title</label>
         <input type="text" class="form-control" name="title" placeholder="Enter title" required>
       </div>
-      <div class="form-group">
+      <div class="form-group mb-2">
         <label for="content">Content</label>
         <textarea class="form-control" name="content" rows="5" placeholder="Write your post here" required></textarea>
       </div>
-      <button type="submit" class="btn btn-outline-primary btn-block">Submit</button>
+      <h5 class="font-weight-light">Select Tags:</h5>
+      {% for tag in tags %}
+      <div class="form-check form-check-inline">
+        <label class="form-check-label">
+          <input class="form-check-input" type="checkbox" name="tags" value={{tag.id}}>
+          {{tag.name}}
+        </label>
+      </div>
+      {% endfor %}
+      <button type="submit" class="btn btn-outline-primary btn-block mt-2">Submit</button>
       <a href="/users/{{user.id}}" class="btn btn-outline-danger btn-block">Cancel</a>
     </form>
   </div>
