--- a/templates/edit_post_form.html
+++ b/templates/edit_post_form.html
@@ -13,7 +13,17 @@
         <label for="content">Content</label>
         <textarea class="form-control" name="content" rows="5" required>{{post.content}}</textarea>
       </div>
-      <button type="submit" class="btn btn-outline-primary btn-block">Save Changes</button>
+      <h5 class="font-weight-light">Select Tags:</h5>
+      {% for tag in tags %}
+      <div class="form-check form-check-inline">
+        <label class="form-check-label">
+          <input class="form-check-input" type="checkbox" name="tags" value={{tag.id}}
+            {{'checked' if tag in post.tags else ''}}>
+          {{tag.name}}
+        </label>
+      </div>
+      {% endfor %}
+      <button type="submit" class="btn btn-outline-primary btn-block mt-2">Save Changes</button>
       <a href="/posts/{{post.id}}" class="btn btn-outline-danger btn-block">Cancel</a>
     </form>
   </div>
